added html in ejs and worked on navbar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,15 @@
 
 <body>
   <%- include('partials/_header') %>
-  <!-- display home page -->
+    <!-- display home page -->
+    <main>
+      <section class="featured">
+
+      </section>
+      <section class="items_listed">
+
+      </section>
+    </main>
 </body>
 
 </html>
