--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,23 @@
 <header>
-  <nav>
-    <!-- This will check if the person logged in is a user or as an admin-->
-    <% if (userID) { %>
-    <% } %>
+  <nav class="navbar-main">
+
+    <div>
+      <label>Logged in as:</label>
+    </div>
+
+    <!-- if admin -->
+    <a href="createlisting">Create Listing</a>
+
+    <!-- if user -->
+    <a href="favourites">Favourites</a>
+
+    <a href="/">Home</a>
+
+    <a href="inbox">Messages</a>
+
+    <a>
+      Streethouse Lightwear
+    </a>
+
   </nav>
 </header>
