added simple css for layout construction

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,6 @@
 body {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   min-height: 100vh;
 
@@ -14,4 +14,8 @@ body {
     rgba(163, 208, 219, 1) 74%,
     rgba(163, 208, 219, 1) 100%
   );
+}
+
+main {
+  margin-top: 50px;
 }
