--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -1,6 +1,21 @@
-nav {
+header {
+  z-index: 1;
+}
+
+.navbar-main {
+  background-color: #FFFFFF;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  font-size: 0.7em;
+
+}
+
+.navbar-main a {
   display: flex;
   justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  width: 65px;
 }
