--- a/views/item.ejs
+++ b/views/item.ejs
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="/styles/main.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/item-page.css" type="text/css" />
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
@@ -20,7 +21,10 @@
 <body>
   <%- include('partials/_header') %>
     <!-- display item page -->
-    <main></main>
+    <main class="item-page">
+      <h1>Name Placement</h1>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Russet_potato_cultivar_with_sprouts.jpg" alt="item photo">
+    </main>
 </body>
 
 </html>
