added simplified layout for item listing

--- a/styles/item-page.scss
+++ b/styles/item-page.scss
@@ -2,3 +2,9 @@
   max-width: 300px;
   max-height: 300px;
 }
+
+#item-description {
+  font-size: 0.6em;
+  max-width: 300px;
+  max-height: 300px;
+}
