--- a/views/item.ejs
+++ b/views/item.ejs
@@ -23,7 +23,26 @@
     <!-- display item page -->
     <main class="item-page">
       <h1>Name Placement</h1>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Russet_potato_cultivar_with_sprouts.jpg" alt="item photo">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/Russet_potato_cultivar_with_sprouts.jpg"
+        alt="item photo">
+      <div id="item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi varius sem placerat
+        tortor finibus, et semper enim viverra. Mauris quis metus sit amet nisl dictum euismod quis at augue. Vestibulum
+        ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus ac nibh eu ipsum dapibus
+        dapibus in nec ligula. Aenean condimentum pellentesque mauris, sit amet molestie nibh hendrerit vel. Aliquam
+        ullamcorper volutpat turpis eget bibendum. Vivamus a diam mollis, convallis tellus et, pulvinar dolor. Sed mi
+        tortor, accumsan eu est sed, imperdiet aliquam metus. Nam vulputate a mi at suscipit. Nullam nec blandit elit.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+      <h3>Price: $9.99</h3>
+
+      <form class="msg-seller">
+        <label for="first-msg">Send Messaging to Seller</label>
+        <br>
+        <input type="textarea" id="first-msg" name="first-msg" value="I'd love to buy your item!">
+
+        <br>
+
+        <input type="submit" value="Submit">
+      </form>
     </main>
 </body>
 
