current routes for Vania

--- a/views/favourites.ejs
+++ b/views/favourites.ejs
@@ -20,7 +20,7 @@
 <body>
   <%- include('partials/_header') %>
     <!-- display for current logged in user's favourites -->
-    <main></main>
+    <main>Your Favourites</main>
 </body>
 
 </html>
