--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,7 +13,7 @@
 
     <a href="/">Home</a>
 
-    <a href="inbox">Messages</a>
+    <a href="inbox">Inbox</a>
 
     <a>
       Streethouse Lightwear
