Add form to create a listing

--- a/views/createlisting.ejs
+++ b/views/createlisting.ejs
@@ -8,6 +8,14 @@
 </head>
 <body>
   <%- include('partials/_header') %>
-  <!-- form to post new item to database to sell -->
+  <form class="form-inline" action="/createlisting" method="POST">
+    <div class="form-group mb-2">
+      <label >Enter Item Information:</label>
+      <input class="form-control" type="text" name="description" placeholder="Enter Description" >
+      <input class="form-control" type="text" name="price" placeholder="Enter Price" >
+      <input class="form-control" type="text" name="photo_url" placeholder="Enter Photo URL" >
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+  </form>
 </body>
 </html>
