Add Logged In As to UI

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,6 +2,7 @@
   <nav>
     <!-- This will check if the person logged in is a user or as an admin-->
     <% if (userID) { %>
+      <div>Logged In As: <%= userID %></div>
     <% } %>
   </nav>
 </header>
