Finish up createlisting view and controller

--- a/views/createlisting.ejs
+++ b/views/createlisting.ejs
@@ -11,6 +11,7 @@
   <form class="form-inline" action="/createlisting" method="POST">
     <div class="form-group mb-2">
       <label >Enter Item Information:</label>
+      <input class="form-control" type="text" name="name" placeholder="Enter Name" >
       <input class="form-control" type="text" name="description" placeholder="Enter Description" >
       <input class="form-control" type="text" name="price" placeholder="Enter Price" >
       <input class="form-control" type="text" name="photo_url" placeholder="Enter Photo URL" >
